--- a/templates/hotrodcs.proj.in
+++ b/templates/hotrodcs.proj.in
@@ -30,6 +30,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="Google.Protobuf">
+      <HintPath>${GOOGLE_PROTOBUF_NUPKG}\Google.Protobuf.3.0.0-beta2\lib\portable-net45+netcore45+wpa81+wp8\Google.Protobuf.dll</HintPath>
+    </Reference>
     <Reference Include="System"/>
     <Reference Include="System.Core"/>
     <Reference Include="System.Configuration"/>
