--- a/templates/hotrodcs.proj.in
+++ b/templates/hotrodcs.proj.in
@@ -26,6 +26,7 @@
     <Compile Include="${W_S}\src\main\cs\Infinispan\HotRod\Exceptions\*.cs"/>
     <Compile Include="${W_S}\src\main\cs\Infinispan\HotRod\Config\*.cs"/>
     <Compile Include="${W_S}\src\main\cs\Infinispan\HotRod\SWIG\*.cs"/>
+    <Compile Include="${W_S}\src\main\cs\Infinispan\HotRod\Event\*.cs"/>
   </ItemGroup>
 
   <ItemGroup>
