--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -473,7 +473,7 @@ file(TO_CMAKE_PATH ${PROTOBUF_PROTOC_EXECUTABLE_CS} CM_PROTOBUF_PROTOC_EXECUTABL
 file(TO_CMAKE_PATH ${OPENSSL_ROOT_DIR} CM_OPENSSL_ROOT_DIR)
 install (FILES "${NLOG_DLL_LOCAL}" DESTINATION lib/)
 install (FILES "${NLOG_LICENSE_LOCAL}" DESTINATION lib/ OPTIONAL)
-install (FILES "${CM_GOOGLE_PROTOBUF_NUPKG}/Google.Protobuf.3.0.0-beta2/lib/portable-net45+netcore45+wpa81+wp8/Google.Protobuf.dll" DESTINATION lib/)
+install (FILES "${CM_GOOGLE_PROTOBUF_NUPKG}/Google.Protobuf.3.4.0/lib/netstandard1.0/Google.Protobuf.dll" DESTINATION lib/)
 install (FILES "${CM_PROTOBUF_PROTOC_EXECUTABLE_CS}" DESTINATION bin/)
 install (DIRECTORY "${CM_OPENSSL_ROOT_DIR}/lib" "${CM_OPENSSL_ROOT_DIR}/bin" "${CM_OPENSSL_ROOT_DIR}/include" DESTINATION .)
 
