--- a/src/Infinispan.HotRod/Infinispan.HotRod.csproj
+++ b/src/Infinispan.HotRod/Infinispan.HotRod.csproj
@@ -5,7 +5,7 @@
     <PackageId>Infinispan.HotRod</PackageId>
     <PackageVersion>8.2.0-Alpha2</PackageVersion>
     <Authors>infinispan.org</Authors>
-    <Description>.NET binding of C++ HotRod client for connecting to infinispan</Description>
+    <Description>.NET core binding of C# HotRod client for connecting to infinispan</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>First release</PackageReleaseNotes>
     <Copyright>Copyright 2017 (c) RedHat. All rights reserved.</Copyright>
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+     <Content Include="../../License.rtf"/>
+     <Content Include="../../templates/README.txt.in"/>
+  </ItemGroup>
 </Project>
