--- a/java_tests/pom.xml
+++ b/java_tests/pom.xml
@@ -17,31 +17,20 @@
     <description>Infinispan HotRod IKVM Wrapper</description>
 
     <properties>
-        <version.org.infinispan>9.0.0.Final</version.org.infinispan>
+        <version.org.infinispan>9.2.0.Final</version.org.infinispan>
         <version.org.jboss.logging.processor>1.2.1.Final</version.org.jboss.logging.processor>
-        <version.org.jboss.narayana.jta>5.2.16.Final</version.org.jboss.narayana.jta>
+      <version.org.jboss.jbossts>4.17.13.Final</version.org.jboss.jbossts>
         <version.org.testng>6.8</version.org.testng>
         <version.io.netty>4.1.9.Final</version.io.netty>
         <version.jcipannotations>1.0</version.jcipannotations>
         <maven.test.skip.exec>true</maven.test.skip.exec>
+      <maven.compiler.source>1.8</maven.compiler.source>
+      <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <build>
         <finalName>hotrod-ikvm</finalName>
         <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-	      <version>3.5.1</version>
-              <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-		<compilerArguments>
-                  <source>1.8</source>
-                  <target>1.8</target>
-              </compilerArguments>
-              </configuration>
-            </plugin>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
@@ -51,24 +40,6 @@
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
-                    </execution>
-                    <execution>
-                        <id>copy</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.infinispan</groupId>
-                                    <artifactId>infinispan-client-hotrod</artifactId>
-                                    <version>${version.org.infinispan}</version>
-                                    <type>jar</type>
-                                    <outputDirectory>${project.build.directory}/infinispan-client-hotrod</outputDirectory>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -88,6 +59,22 @@
         </dependency>
         <dependency>
             <groupId>org.infinispan</groupId>
+         <artifactId>infinispan-remote-query-client</artifactId>
+         <version>${version.org.infinispan}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.infinispan</groupId>
+         <artifactId>infinispan-query</artifactId>
+         <version>${version.org.infinispan}</version>
+         <classifier>tests</classifier>
+      </dependency>
+      <dependency>
+         <groupId>org.infinispan</groupId>
+         <artifactId>infinispan-query</artifactId>
+         <version>${version.org.infinispan}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.infinispan</groupId>
             <artifactId>infinispan-core</artifactId>
             <version>${version.org.infinispan}</version>
             <classifier>tests</classifier>
@@ -95,6 +82,11 @@
         </dependency>
         <dependency>
             <groupId>org.infinispan</groupId>
+         <artifactId>infinispan-core</artifactId>
+         <version>${version.org.infinispan}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.infinispan</groupId>
             <artifactId>infinispan-server-hotrod</artifactId>
             <version>${version.org.infinispan}</version>
             <scope>test</scope>
@@ -102,6 +94,13 @@
         <dependency>
             <groupId>org.infinispan</groupId>
             <artifactId>infinispan-server-hotrod</artifactId>
+            <version>${version.org.infinispan}</version>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-server-core</artifactId>
             <version>${version.org.infinispan}</version>
             <classifier>tests</classifier>
             <scope>test</scope>
@@ -115,14 +114,14 @@
         </dependency>
         <dependency>
             <groupId>org.infinispan</groupId>
-            <artifactId>infinispan-query-dsl</artifactId>
+            <artifactId>infinispan-scripting</artifactId>
             <version>${version.org.infinispan}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.jboss.narayana.jta</groupId>
+         <groupId>org.jboss.jbossts.jta</groupId>
             <artifactId>narayana-jta</artifactId>
-            <version>${version.org.jboss.narayana.jta}</version>
+         <version>${version.org.jboss.jbossts}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -131,12 +130,7 @@
             <version>${version.org.testng}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>net.jcip</groupId>
-            <artifactId>jcip-annotations</artifactId>
-            <version>${version.jcipannotations}</version>
-            <optional>true</optional>
-        </dependency>
+
 
         <!-- generated by ikvmstub -->
         <dependency>
